[package]
name = "syn-ack"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*", "test-utils"]

[dependencies]
ics = { path = "./crates/ics/" }
surreal_derive = { path = "./crates/surreal_derive/" }
argon2 = "0.5.3"
chrono = "0.4.38"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.88"
surrealdb = { version = "2.0.0", features = ["kv-mem"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
test-utils = { path = "test-utils" }
